2006-01-27  Katsutoshi Itoh  <cut-sea@kahua.org>

	* src/kahua/persistence.scm:
	modify with-db macro.
	We can use with-db macro whiout knowledge for
	current-db's path name.
	
2006-01-22  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/persistence.scm:
	Changed id-counter writer to use sys-mkstemp.
	(Patch from Tatsuya BIZENN)

	* src/kahua-server.scm:
	Changed to block SIGINT, SIGHUP SIGTERM signal on accept-handler.
	(Patch from Tatsuya BIZENN)

2006-01-14  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/server.scm: Added interp-json, <json-base>, x->json.

2006-01-10  TAHARA Yusei  <yusei@domen.cx>

	* src/kahua/serialize.scm, test/serialize.scm:
	Added keyword support.

2006-01-09  TAHARA Yusei  <yusei@domen.cx>

	* src/kahua/serialize.scm:
	Bug fixed.
	* test/serialize.scm, test/Makefile.in:
	Added test code.

2006-01-09  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/server.scm:
	Added kahua-render proc.
	Added interp-css.

	* src/kahua-server.scm:
	Added kahua-write-static-file.
	Added kahua-hook-initial.
	Improved kahua-delete-hook!.

2006-01-09  Nobuo Yamashita  <nobsun@sampou.org>

	* test/many-as.kahua, test/dead-lock.scm, test/Makefile.in
	Added.  This test reproduced dead-lock in the moment.

2006-01-08  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/server.scm:
	Changed kahua-current-user to use kahua-find-user.

	* src/kahua/user.scm:
	Removed add-user check-user find-user user-password-change \
	        user-password-change-force user-has-role?.
	Added <kahua-user-meta>.
	Changed <kahua-user> to use <kahua-user-meta> meta class.

2006-01-08  TAHARA Yusei  <yusei@domen.cx>

	* src/kahua/serialize.scm:
	Added kahua.serialize module.

2006-01-08  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/server.scm:
	Added and Exported apply-entry-method.
	Added define-method-rule.
	Changed define-entry-method to use define-method-rule instead of define-method.
	Changed serialized object's delimiter to "\0".
