@@ -1,10 +1,16 @@
+2006-01-28  SHIBATA Tomohisa  <shibata@kahua.org>
+
+	* src/kahua/persistence.scm:
+	Added dataval-type method to <kahua-db-dbi>.
+	dataval-type return type of dataval field.
+
 2006-01-27  Katsutoshi Itoh  <cut-sea@kahua.org>
 
 	* src/kahua/persistence.scm:
 	modify with-db macro.
 	We can use with-db macro whiout knowledge for
 	current-db's path name.
-	
+
 2006-01-22  SHIBATA Tomohisa  <shibata@kahua.org>
 
 	* src/kahua/persistence.scm:
